force-app/main/default/objects/Operational_Placement__c/Operational_Placement__c.object-meta.xml
<CustomObject>
    <label>Operational Placement</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Operational Placement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational Placements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>