force-app/main/default/objects/Operational_Placement__c/fields/Audience_Segment_Details__c.field-meta.xml
<CustomField>
    <fullName>Audience_Segment_Details__c</fullName>
    <label>Audience Segment Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>