force-app/main/default/objects/Operational_Placement__c/fields/Audience_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Audience_Targeting__c</fullName>
    <label>Audience Targeting</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>