force-app/main/default/objects/Operational_Placement__c/fields/Daypart__c.field-meta.xml
<CustomField>
    <fullName>Daypart__c</fullName>
    <label>Daypart</label>
    <length>255</length>
    <type>Text</type>
</CustomField>