force-app/main/default/objects/Operational_Placement__c/fields/Frequency_Cap__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Cap__c</fullName>
    <label>Frequency Cap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>