force-app/main/default/objects/Operational_Placement__c/fields/Native_WebOS_Units_App_Based_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Native_WebOS_Units_App_Based_Exclusions__c</fullName>
    <label>Native WebOS/Units/App Based Exclusions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wedge Exclusion</fullName>
            </value>
            <value>
                <fullName>WebOS 3.0 Exclusion</fullName>
            </value>
            <value>
                <fullName>WebOS 3.5 Exclusion</fullName>
            </value>
            <value>
                <fullName>WebOS 4.0 Exclusion</fullName>
            </value>
            <value>
                <fullName>WebOS 4.5 Exclusion</fullName>
            </value>
            <value>
                <fullName>WebOS 5.0 Exclusion</fullName>
            </value>
            <value>
                <fullName>WebOS 6.0 Exclusion</fullName>
            </value>
            <value>
                <fullName>WebOS 22 Exclusion</fullName>
            </value>
            <value>
                <fullName>WebOS 23 Exclusion</fullName>
            </value>
            <value>
                <fullName>App Install Base Exclusion</fullName>
            </value>
            <value>
                <fullName>Other.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>