force-app/main/default/objects/Operational_Placement__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>Operational_Placement_Levels1</relationshipName>
    <type>Lookup</type>
</CustomField>