force-app/main/default/objects/Operational_Placement__c/fields/Original_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Booking_Amount__c</fullName>
    <label>Original Booking Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>