force-app/main/default/objects/Operational_Placement__c/fields/Placement_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Placement_Display_Name__c</fullName>
    <label>Placement Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>