force-app/main/default/objects/Operational_Placement__c/fields/Total_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Amount__c</fullName>
    <label>Total Booking Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>